--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -4,7 +4,6 @@ jobs:
   first-job:
     runs-on: ubuntu-latest
     steps:
-      - name: Print greeting
+      - name: | Print greeting
         run: echo "Hellow World!"
-      - name: Print goodbye
         run: echo "Done - bye!"
