--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -4,6 +4,7 @@ jobs:
   first-job:
     runs-on: ubuntu-latest
     steps:
-      - name: | 
-        run: echo "Hellow World!"
-        run: echo "Done - bye!"
+      - name: Print Greeting 
+        run: |
+          echo "Hellow World!"
+          echo "Done - bye!"
